# Workforce_Management

./: .cache_ggshield  .gitignore  SSO.py  main.py  package-lock.json  pyproject.toml  requirements.txt
app/: auth.py  db.py  main.py  routes.py  schemas.py
app/__pycache__/: __init__.cpython-313.pyc.2519192050288  auth.cpython-313.pyc.2519197249216  db.cpython-313.pyc.2519197249216  main.cpython-313.pyc.2519197249216  routes.cpython-313.pyc.2519197249216  schemas.cpython-313.pyc.2519197249216
app/api/: deps.py
app/core/: config.py  security.py
app/db/: connection.py
app/repositories/: token_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py
app/services/: auth_service.py  booking_service.py
backend/: __init__.py  main.py
backend/api/: __init__.py  deps.py
backend/core/: __init__.py  config.py  permissions.py  security.py  sso.py  storage.py
backend/db/: __init__.py  connection.py
backend/repositories/: __init__.py  booking_repository.py  dashboard_repository.py  floor_layout_repository.py  location_repository.py  preferences_repository.py  team_repository.py  token_repository.py  user_repository.py
backend/schemas/: __init__.py  admin_dashboard.py  auth.py  booking.py  dashboard.py  floor_layout.py  location.py  preferences.py
files/: .env.example  README.md  auth_router.py  auth_service.py  config.py  database.py  dependencies.py  main.py  oidc_service.py  requirements.txt  schemas.py  security.py  tables.py  tenant_service.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
(+78 files in other folders)
